[Java] Avoid deprecated warning in Java 10 code.